--- a/hanoi-ar.html
+++ b/hanoi-ar.html
@@ -48,17 +48,16 @@
         <a-asset-item id="diskModel" src="assets/disk.glb"></a-asset-item>
       </a-assets>
 
-      <a-marker preset="hiro">
-        <!-- base -->
-        <a-entity gltf-model="#baseModel" scale="0.005 0.005 0.005" position="0 0 0"></a-entity>
+      <a-marker type="pattern" url="assets/fuji.patt">
+  <!-- base -->
+  <a-entity gltf-model="#baseModel" scale="0.005 0.005 0.005" position="0 0 0"></a-entity>
 
-        <!-- ポールを3本 個別に配置 -->
-        <a-entity id="pole1" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="-0.4 0 0"></a-entity>
-        <a-entity id="pole2" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="0 0 0"></a-entity>
-        <a-entity id="pole3" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="0.4 0 0"></a-entity>
+  <!-- ポールを3本 個別に配置 -->
+  <a-entity id="pole1" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="-0.4 0 0"></a-entity>
+  <a-entity id="pole2" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="0 0 0"></a-entity>
+  <a-entity id="pole3" class="pole clickable" gltf-model="#poleModel" scale="0.005 0.005 0.005" position="0.4 0 0"></a-entity>
+</a-marker>
 
-        
-      </a-marker>
 
       <a-entity camera>
         <a-cursor 
