--- a/index.html
+++ b/index.html
@@ -5,149 +5,161 @@
   <title>ハノイの塔 説明ページ</title>
   <style>
     body {
-      font-family: "Yu Gothic", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif;
-      background: #f0f8ff;
+      font-family: 'Segoe UI', 'Yu Gothic', sans-serif;
+      background: linear-gradient(to bottom right, #eaf6ff, #d0eafc);
       color: #1a1a1a;
       padding: 40px 20px;
-      max-width: 720px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
+    .card {
+      background: #ffffff;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+    }
+
     h1 {
-      color: #005b96;
-      border-bottom: 3px solid #007acc;
-      padding-bottom: 10px;
-      margin-bottom: 30px;
-      font-weight: 700;
-      font-size: 2.2rem;
+      color: #0a3d62;
+      font-size: 2.5rem;
+      border-bottom: 4px solid #60a3bc;
+      padding-bottom: 15px;
+      margin-bottom: 35px;
+      text-align: center;
     }
 
     h2 {
-      color: #007acc;
+      color: #1e6091;
       margin-top: 40px;
-      margin-bottom: 15px;
-      font-weight: 600;
-      border-left: 5px solid #007acc;
-      padding-left: 10px;
+      margin-bottom: 20px;
+      font-size: 1.6rem;
+      font-weight: bold;
+      border-left: 6px solid #60a3bc;
+      padding-left: 12px;
     }
 
     p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      background: #e6f0fa;
+      font-size: 1.15rem;
+      line-height: 1.8;
+      background: #f3f9ff;
       padding: 20px;
+      border-left: 5px solid #60a3bc;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
     }
 
     ul {
-      background: #dce9fb;
-      padding: 15px 20px;
-      border-radius: 8px;
-      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+      background: #f0f8ff;
+      padding: 20px 25px;
+      border-radius: 10px;
       list-style-type: disc;
-      margin-left: 20px;
-      font-size: 1.05rem;
-      line-height: 1.5;
+      font-size: 1.1rem;
       color: #034078;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
 
     ul li {
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     label {
       display: block;
       margin-top: 40px;
+      font-size: 1.2rem;
+      color: #1e6091;
       font-weight: 600;
-      font-size: 1.1rem;
-      color: #007acc;
-      margin-bottom: 8px;
+      margin-bottom: 10px;
     }
 
     select {
-      font-size: 1.1rem;
-      padding: 8px 12px;
-      border-radius: 5px;
-      border: 1.5px solid #007acc;
+      width: 100%;
+      font-size: 1.15rem;
+      padding: 10px 14px;
+      border-radius: 8px;
+      border: 2px solid #60a3bc;
       background: white;
       color: #034078;
+      appearance: none;
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 140 140' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,0 140,0 70,100' fill='%2360a3bc'/%3E%3C/svg%3E");
+      background-repeat: no-repeat;
+      background-position: right 12px center;
+      background-size: 16px;
       cursor: pointer;
       transition: border-color 0.3s ease;
     }
 
-    select:hover, select:focus {
-      border-color: #005b96;
+    select:focus {
+      border-color: #0a3d62;
       outline: none;
     }
 
     a.button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 25px;
-      background-color: #007acc;
-      color: white;
+      display: block;
+      width: 100%;
+      text-align: center;
+      margin-top: 40px;
+      padding: 15px;
+      background-color: #1e6091;
+      color: #fff;
       text-decoration: none;
-      border-radius: 30px;
+      border-radius: 40px;
       font-weight: 700;
-      font-size: 1.1rem;
-      box-shadow: 0 4px 8px rgba(0, 122, 204, 0.4);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      font-size: 1.2rem;
+      box-shadow: 0 6px 14px rgba(30, 96, 145, 0.4);
+      transition: background-color 0.3s ease, transform 0.2s ease;
     }
 
     a.button:hover {
-      background-color: #005b96;
-      box-shadow: 0 6px 12px rgba(0, 91, 150, 0.6);
+      background-color: #0a3d62;
+      transform: translateY(-2px);
     }
 
-    /* スマホ対応 */
-    @media (max-width: 480px) {
+    @media (max-width: 600px) {
       body {
         padding: 20px 10px;
       }
 
       h1 {
-        font-size: 1.8rem;
-      }
-
-      a.button {
-        width: 100%;
-        text-align: center;
-        padding: 15px 0;
-        font-size: 1.2rem;
+        font-size: 2rem;
       }
 
       select {
-        width: 100%;
+        font-size: 1rem;
+      }
+
+      a.button {
+        font-size: 1.1rem;
       }
     }
   </style>
 </head>
 <body>
-  <h1>ハノイの塔とは？</h1>
-  <p>
-    ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使ったパズルです。  
-    全てのディスクを1つのポールから別のポールに移動させることが目的ですが、  
-    大きいディスクの上に小さいディスクを置いてはいけません。
-  </p>
+  <div class="card">
+    <h1>ハノイの塔とは？</h1>
+    <p>
+      ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使った古典的なパズルです。<br>
+      目的は、すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。
+    </p>
 
-  <h2>ルール</h2>
-  <ul>
-    <li>一度に1枚のディスクしか動かせません。</li>
-    <li>大きいディスクの上に小さいディスクを置いてはいけません。</li>
-    <li>すべてのディスクを別のポールに移動させることを目指します。</li>
-  </ul>
+    <h2>ルール</h2>
+    <ul>
+      <li>一度に動かせるディスクは1枚だけです。</li>
+      <li>大きいディスクの上に小さいディスクを置くことはできません。</li>
+      <li>すべてのディスクを別のポールに正しく移動させてください。</li>
+    </ul>
 
-  <label for="diskCount">ディスクの数を選んでください：</label>
-  <select id="diskCount" name="diskCount">
-    <option value="3" selected>3枚</option>
-    <option value="4">4枚</option>
-    <option value="5">5枚</option>
-    <option value="6">6枚</option>
-    <option value="7">7枚</option>
-  </select>
+    <label for="diskCount">ディスクの数を選んでください：</label>
+    <select id="diskCount" name="diskCount">
+      <option value="3" selected>3枚</option>
+      <option value="4">4枚</option>
+      <option value="5">5枚</option>
+      <option value="6">6枚</option>
+      <option value="7">7枚</option>
+    </select>
 
-  <a href="hanoi-ar.html" class="button" id="startButton">ARでハノイの塔を遊ぶ</a>
+    <a href="hanoi-ar.html" class="button" id="startButton">ARでハノイの塔を遊ぶ</a>
+  </div>
 
   <script>
     const select = document.getElementById("diskCount");
@@ -155,12 +167,11 @@
 
     function updateLink() {
       const count = select.value;
-      // 選択したディスク数をクエリパラメータに付与
       button.href = `hanoi-ar.html?disks=${count}`;
     }
 
     select.addEventListener("change", updateLink);
-    updateLink(); // 初期リンク設定
+    updateLink();
   </script>
 </body>
 </html>
