change .patt and button

--- a/hanoi-ar.html
+++ b/hanoi-ar.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <div id="message"></div>
-    <button id="moveButton">ディスクを移動</button>
+    <button id="moveButton">選択</button>
     <a-scene
       embedded
       arjs="sourceType: webcam; debugUIEnabled: false;"
