--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
       <li>一度に動かせるディスクは1枚だけです。</li>
       <li>大きいディスクの上に小さいディスクを置くことはできません。</li>
       <li>すべてのディスクを別のポールに正しく移動させてください。</li>
+      <li>スマホを動かしながらカーソルを合わせてボタンを押してください。</li>
     </ul>
 
     <label for="diskCount">ディスクの数を選んでください：</label>
