--- a/index.html
+++ b/index.html
@@ -135,11 +135,26 @@
   </style>
 </head>
 <body>
+      <h2>ARマーカー</h2>
+    <p>
+      下の画像がARマーカーです。<br>
+      これを別のスマホや紙に表示して、カメラで映してください。
+    </p>
+    <img src="assets/fuji.png" alt="ARマーカー画像" style="
+      max-width: 100%;
+      height: auto;
+      border: 4px solid #60a3bc;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      margin-bottom: 30px;
+    ">
+
   <div class="card">
     <h1>ハノイの塔とは？</h1>
     <p>
-      ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使った古典的なパズルです。<br>
-      目的は、すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。
+      ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使ったパズルです。<br>
+      すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。<br>
+      マーカーに向かってカメラを向けると、ARでハノイの塔を体験できます。<br>
     </p>
 
     <h2>ルール</h2>
