--- a/index.html
+++ b/index.html
@@ -135,7 +135,23 @@
   </style>
 </head>
 <body>
-      <h2>ARマーカー</h2>
+  <div class="card">
+    <h1>ハノイの塔とは？</h1>
+    <p>
+      ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使ったパズルです。<br>
+      すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。<br>
+      マーカーに向かってカメラを向けると、ARでハノイの塔を体験できます。
+    </p>
+
+    <h2>ルール</h2>
+    <ul>
+      <li>一度に動かせるディスクは1枚だけです。</li>
+      <li>大きいディスクの上に小さいディスクを置くことはできません。</li>
+      <li>すべてのディスクを別のポールに正しく移動させてください。</li>
+      <li>スマホを動かしながらカーソルを合わせてボタンを押してください。</li>
+    </ul>
+
+    <h2>ARマーカー</h2>
     <p>
       下の画像がARマーカーです。<br>
       これを別のスマホや紙に表示して、カメラで映してください。
@@ -148,22 +164,6 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       margin-bottom: 30px;
     ">
-
-  <div class="card">
-    <h1>ハノイの塔とは？</h1>
-    <p>
-      ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使ったパズルです。<br>
-      すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。<br>
-      マーカーに向かってカメラを向けると、ARでハノイの塔を体験できます。<br>
-    </p>
-
-    <h2>ルール</h2>
-    <ul>
-      <li>一度に動かせるディスクは1枚だけです。</li>
-      <li>大きいディスクの上に小さいディスクを置くことはできません。</li>
-      <li>すべてのディスクを別のポールに正しく移動させてください。</li>
-      <li>スマホを動かしながらカーソルを合わせてボタンを押してください。</li>
-    </ul>
 
     <label for="diskCount">ディスクの数を選んでください：</label>
     <select id="diskCount" name="diskCount">
@@ -190,4 +190,5 @@
     updateLink();
   </script>
 </body>
+
 </html>
