--- a/hanoi-ar.html
+++ b/hanoi-ar.html
@@ -50,7 +50,7 @@
   padding: 20px;
   flex-direction: column;
 ">
-  <p>まず、マーカーにカメラを向けてください。<br>その後、カーソルを合わせてディスクをタップしてね。</p>
+  <p>まず、マーカーにカメラを向けてね。<br>その後、カーソルを合わせてディスクをタップしてね。</p>
   <button onclick="closePopup()" style="
     margin-top: 20px;
     padding: 10px 20px;
