--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <h1>ハノイの塔とは？</h1>
     <p>
       ハノイの塔は、3本のポールと複数の異なるサイズのディスクを使ったパズルです。<br>
-      すべてのディスクを1つのポールから別のポールにルールに従って移動させることです。<br>
+      全てのディスクを1つのポールから別のポールにルールに従って移動させることです。<br>
       マーカーに向かってカメラを向けると、ARでハノイの塔を体験できます。
     </p>
 
